@@ -19,6 +19,10 @@ Broker:
 - Add `--tls-keylog` option which can be used to generate a file that can be
   used by wireshark to decrypt TLS traffic for debugging purposes. Closes #1818.
 - Add support for delayed basic authentication in plugins.
+- Plugins using the MOSQ_EVT_MESSAGE callback can now return
+  MOSQ_ERR_QUOTA_EXCEEDED to have the message be rejected. MQTT v5 clients
+  using QoS 1 or 2 will receive the quota-exceeded reason code in the
+  corresponding PUBACK/PUBREC.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
